syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/BeInBloom/grpc-chat/gen/go/auth/v1;authv1";

service UserAPIService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_USER = 1;
  USER_ROLE_ADMIN = 2;
}

message CreateRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  UserRole role = 4;
}

message CreateResponse {
  string id = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  UserRole role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  string id = 1;
  optional string name = 2;
  optional string email = 3;
}

message UpdateResponse {}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {}
